# gpjarmu-riport

./: .env.example  .env.example.fresh  .gitignore  .vercelignore  LICENSE  README-web.md  README.md  pyproject.toml  requirements-dev.txt  requirements-vercel.txt  requirements.txt  requirements.vercel.txt  run.py  vercel.json
.hermes/: twin.sh
api/: index.py
src/gpjarmu_riport/: __init__.py  cli.py  config.py
src/gpjarmu_riport/email/: __init__.py  eml_builder.py  mailer.py  smtp.py
src/gpjarmu_riport/graph/: __init__.py  state.py
src/gpjarmu_riport/graph/nodes/: classify.py  dedupe.py  discover.py  expand.py  render.py
src/gpjarmu_riport/prompts/: relevance-classifier.system.md  report-writer.system.md  topic-taxonomy.md
src/gpjarmu_riport/scraper/: __init__.py  magyarkozlony.py
src/gpjarmu_riport/templates/: eml-template.html.j2
src/hr_kozlony/: __init__.py  cli.py  config.py  llm_factory.py
src/hr_kozlony/email/: __init__.py  eml_builder.py  mailer.py
src/hr_kozlony/graph/nodes/: __init__.py  classify.py  expand.py  fetch.py  render.py
src/hr_kozlony/prompts/: __init__.py  relevance-classifier.system.md  report-writer.system.md  topic-taxonomy.md
src/hr_kozlony/scraper/: magyarkozlony.py
src/hr_kozlony/state/: __init__.py  db.py
src/hr_kozlony/templates/: eml-template.html.j2
src/hr_kozlony/utils/: __init__.py  logging.py
tests/: conftest.py  test_config_smtp.py  test_eml_builder.py  test_expand.py  test_graph.py  test_scraper.py  test_smtp.py  test_state.py
web/: app.js  index.html  style.css
