[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpjarmu-riport"
version = "0.1.0"
description = "Havi Céges Gépjármű Magyar Közlöny monitor — LangGraph pipeline that scrapes issues, classifies paragraphs semantically, deduplicates, and emits a single .eml report."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ger", email = "gkjkovacs@gmail.com" },
]
keywords = ["magyar-kozlony", "regulatory-monitor", "langgraph", "céges-gépjármű"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Utilities",
]

dependencies = [
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "python-dotenv>=1.0,<2.0",
    "langgraph>=0.2,<0.3",
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-openai>=0.2,<0.3",
    "requests>=2.32,<3.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=5.0,<6.0",
    "pdfplumber>=0.11,<1.0",
    "jinja2>=3.1,<4.0",
    "rich>=13.7,<14.0",
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-mock>=3.14,<4.0",
    "respx>=0.21,<1.0",
    "responses>=0.25,<1.0",
]

[project.scripts]
gpjarmu = "gpjarmu_riport.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gpjarmu_riport = ["prompts/*.md", "prompts/*.txt", "templates/*.html", "templates/*.j2"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W", "RUF"]
ignore = ["E501"]  # line length is handled by formatter

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # start permissive, tighten later
ignore_missing_imports = true
